app/styles/main.scss
$icon-font-path: '../fonts/';
$grid: 20px;
$node: 3;
$height: 33;
$port-highlight: rgb(0, 128, 0);
$inactive: url(#inactive);
$active: rgb(128, 255, 128);

// bower:scss
@import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
// endbower

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.node {
  height: $node * $grid + 1;
  position: absolute;
  width: $node * $grid + 1;
  z-index: 2;
}

.node-dragging {
  fill: $port-highlight;
}

.node-dropzone {
  fill: $port-highlight;
}

  .node-inactive rect {
    fill: $inactive;
  }

  .node-active rect {
    fill: $active;
  }

  .node-active .icon-output-lamp-circle,
  .node-active .icon-input-circle {
    fill: lime;
  }

  .node-active .icon-output-fan-path {
    animation: spin 1s linear infinite;
    transform-origin: 30px 30px;
  }

  @keyframes spin { 100% { transform: rotate(360deg); } }

.icon-input-button {
  transform-origin: 30px 50px;
  cursor: pointer;
}

.link {
  height: $height * $grid;
  position: absolute;
  z-index: 1;
}

  .link polyline {
    stroke-linejoin: round;
  }

  .link-inactive polyline {
    stroke: $inactive;
  }

  .link-active polyline {
    stroke: $active;
  }

.palette {
  width: 100%;
}

  .palette col {
    width: 33.3%;
  }

  .palette table {
    margin-bottom: -$node * $grid;
  }

  .palette td {
    height: ($node + 1) * $grid;
    vertical-align: top;
  }

  .palette tr:last-child td {
    height: $node * $grid;
  }

#templates {
  display: none;
}

#temp {
  height: $height * $grid;
  position: absolute;
  z-index: 1;
}

body {
  -webkit-user-select: none;
  -moz-user-select: none;
  -khtml-user-select: none;
  -ms-user-select: none;
}

